   * Support PyPy
   * Add filter for apache-botsearch
   * Add filter for kerio. Thanks Tony Lawrence for blog of regexs and
     providing samples. Close gh-120
   * Filter for stunnel
   * Filter for Counter Strike 1.6. Thanks to onorua for logs.
     Close gh-347
   * Filter for squirrelmail. Close gh-261
   * Filter for tine20. Close gh-583

- Enhancements
   * Jail names increased to 26 characters and iptables prefix reduced
     from fail2ban- to f2b- as suggested by buanzo in gh-462.
   * Multiline filter for sendmail-spam. Close gh-418
   * Multiline regex for Disconnecting: Too many authentication failures for
     root [preauth]\nConnection closed by 6X.XXX.XXX.XXX [preauth]
   * Replacing use of deprecated API (.warning, .assertEqual, etc)
   * [..a648cc2] Filters can have options now too which are substituted into
     failregex / ignoreregex
   * [..e019ab7] Multiple instances of the same action are allowed in the
     same jail -- use actname option to disambiguate.
   * Add honeypot email address to exim-spam filter as argument


ver. 0.8.13 (2014/XX/XXX) - maintaince-only-from-now-on
----------

- Fixes:
  - action firewallcmd-ipset had non-working actioncheck. Removed.
    redhat bug #1046816.
  - filter pureftpd - added _daemon which got removed. Added

- New Features:

- Enhancements:
  - filter pureftpd - added all translations of "Authentication failed for
    user"
  - filter dovecot - lip= was optional and extended TLS errors can occur.
    Thanks Noel Butler.

ver. 0.8.12 (2014/01/22) - things-can-only-get-better
----------

- IMPORTANT incompatible changes:
  - Rename firewall-cmd-direct-new to firewallcmd-new to fit within jail name
    name length. As per gh-395
  - mysqld-syslog-iptables jailname was too long. Renamed to mysqld-syslog.
	  Part of gh-447.

- Fixes:
  - allow for ",milliseconds" in the custom date format of proftpd.log
  - allow for ", referer ..." in apache-* filter for apache error logs.